--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
-  name: test-repo
+  name: git-gateway
+  branch: master
 
-media_folder: static/img
-public_folder: /img
+media_folder: static/media
+public_folder: /media
 
 collections:
   - name: "bulletin"
@@ -22,6 +23,8 @@ collections:
   - name: "stream"
     label: "Stream Item"
     folder: "content"
+    media_folder: ''
+    public_folder: ''
     create: true
     path: "stream/{{year}}/{{slug}}"
     slug: "{{month}}-{{day}}-{{slug}}"
